added our logo to the website

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     </svg>
     
     <header>
-        <div class="logo">Interactive<span>Nature</span></div>
+        <div class="logo">
+            <a href="index.html">
+                <img src="assets/images/InteractiveNatureLogo.png" alt="Interactive Nature Logo">
+            </a>
+        </div>
         <nav>
             <ul>
                 <li><a href="#services">Services</a></li>
