--- a/projects/audio-reactive-projection.html
+++ b/projects/audio-reactive-projection.html
@@ -38,9 +38,12 @@
     </svg>
     
     <header>
-        <div class="logo">
-            <a href="../index.html">Interactive<span>Nature</span></a>
-        </div>
+        <header>
+            <div class="logo">
+                <a href="../index.html">
+                  <img src="../assets/images/InteractiveNatureLogo.png" alt="Interactive Nature Logo">
+                </a>
+              </div>
         <nav>
             <ul>
                 <li><a href="../index.html#services">Services</a></li>
