--- a/services/interactive-installations.html
+++ b/services/interactive-installations.html
@@ -39,8 +39,10 @@
     
     <header>
         <div class="logo">
-            <a href="../index.html">Interactive<span>Nature</span></a>
-        </div>
+            <a href="../index.html">
+              <img src="../assets/images/InteractiveNatureLogo.png" alt="Interactive Nature Logo">
+            </a>
+          </div>
         <nav>
             <ul>
                 <li><a href="../index.html#services">Services</a></li>
