added video background to site

--- a/index.html
+++ b/index.html
@@ -94,8 +94,13 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <div class="container">
+<section class="hero">
+    <div class="video-background">
+        <video autoplay loop muted playsinline>
+            <source src="assets/videos/groundStarsTracking.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="container">
             <h1>Crafting <span>Spatial Experiences</span> That Transform Reality</h1>
             <p>We're an Austin-based design studio specializing in immersive environments, interactive installations, and technical event production.</p>
             <a href="#contact" class="cta-button">Start a Project</a>
