new project pages and added images to projects

--- a/projects/datura.html
+++ b/projects/datura.html
@@ -57,7 +57,7 @@
     <section class="project-hero">
         <div class="project-hero-media">
             <!-- Project image -->
-            <img src="../assets/projects/Datura/selected/HighresScreenshot00006.png" alt="Datura">
+            <img src="../assets/projects/Datura/selected/HighresScreenshot00000.png" alt="Datura">
             
             <!-- Overlay with gradient for better text visibility -->
             <div class="hero-overlay"></div>
@@ -104,17 +104,24 @@
             <div class="gallery-grid">
                 <!-- Gallery images -->
                 <div class="gallery-item">
-                    <img src="../assets/projects/Datura/selected/HighresScreenshot00006.png" alt="Datura - 1">
+                    <img src="../assets/projects/Datura/selected/IMG_8944.jpeg" alt="Datura - 5">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/Datura/selected/HighresScreenshot00007.png" alt="Datura - 2">
+                    <img src="../assets/projects/Datura/selected/party2.png" alt="Datura - 6">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/Datura/selected/HighresScreenshot00008.png" alt="Datura - 3">
+                    <img src="../assets/projects/Datura/selected/forbiddenGarden.png" alt="Datura - 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="[GALLERY_IMAGE_4]" alt="[GALLERY_CAPTION_4]">
+                    <img src="../assets/projects/Datura/selected/HighresScreenshot00000.png" alt="Datura - 2">
                 </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/Datura/selected/HighresScreenshot00007.png" alt="Datura - 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/Datura/selected/HighresScreenshot00008.png" alt="Datura - 4">
+                </div>
+
 
             </div>
         </div>
