--- a/projects/ouomt.html
+++ b/projects/ouomt.html
@@ -57,7 +57,7 @@
     <section class="project-hero">
         <div class="project-hero-media">
             <!-- Project image -->
-            <img src="../assets/projects/OUOMT/selected/OMT Screenshot.png" alt="OUOMT">
+            <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime6.PNG" alt="OUOMT">
             
             <!-- Overlay with gradient for better text visibility -->
             <div class="hero-overlay"></div>
@@ -104,16 +104,28 @@
             <div class="gallery-grid">
                 <!-- Gallery images -->
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/OMT Screenshot.png" alt="OUOMT - 1">
+                    <img src="../assets/projects/OUOMT/selected/Night_tech.jpg" alt="OUOMT - 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime.PNG" alt="OUOMT - 2">
+                    <img src="../assets/projects/OUOMT/selected/OMT Screenshot.png" alt="OUOMT - 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime3.PNG" alt="OUOMT - 3">
+                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime.PNG" alt="OUOMT - 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime4.PNG" alt="OUOMT - 4">
+                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime3.PNG" alt="OUOMT - 4">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime4.PNG" alt="OUOMT - 5">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime5.PNG" alt="OUOMT - 6">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime6.PNG" alt="OUOMT - 7">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/OUOMT/selected/OUAOMT1.jpg" alt="OUOMT - 8">
                 </div>
 
             </div>
