--- a/projects/sxsw_install.html
+++ b/projects/sxsw_install.html
@@ -57,13 +57,13 @@
     <section class="project-hero">
         <div class="project-hero-media">
             <!-- Project image -->
-            <img src="../assets/projects/SXSW_Install/selected/apothacary.JPG" alt="SXSW_Install">
+            <img src="../assets/projects/SXSW_Install/selected/apothacary.JPG" alt="SXSW Experiencial Design">
             
             <!-- Overlay with gradient for better text visibility -->
             <div class="hero-overlay"></div>
         </div>
         <div class="project-hero-content">
-            <h1>SXSW_Install</h1>
+            <h1>SXSW Experiential Installation</h1>
             <p class="project-subtitle">Interactive Experience</p>
         </div>
     </section>
@@ -74,22 +74,25 @@
             <div class="project-info">
                 <div class="project-info-left">
                     <h2>Project Overview</h2>
-                    <p>This is an automatically generated project page for SXSW_Install. Please update this description with details about the project.</p>
-                    <p>You can add multiple paragraphs to describe the project's concept, goals, and outcomes.</p>
+                    <p>Interactive Nature Studio provided comprehensive technical and creative support for three high-end experiential installations at SXSW 2024. Our team handled technical drafting, 3D rendering, design assistance, project management, fabrication supervision, and installation across multiple venues. The project utilized a sophisticated technology stack including Vectorworks, Unreal Engine, Maya, Blender, Substance Painter, Substance Sampler, Photoshop, and Polycam, complemented by custom carpentry solutions.</p>
+                    <p>The concept centered on creating bold, luxurious, and memorable experiences for SXSW attendees that would generate significant social media engagement. These installations were designed to establish Delta's presence at SXSW 2024 while educating visitors about Delta's innovative system for utilizing airline miles as currency for various purchases.
+                        Goals and Outcomes
+                        The primary goals were to create immersive spaces that would attract foot traffic, encourage social sharing, and effectively communicate Delta's brand message. The installations successfully achieved these objectives, with events running flawlessly across all venues and generating substantial digital engagement throughout SXSW.
+                        What made this project particularly remarkable was our small team's ability to coordinate complex tasks across three separate venues while maintaining exceptional quality standards. Our flexibility allowed us to accommodate numerous last-minute requests without compromising the overall vision or timeline.</p>
                 </div>
                 <div class="project-info-right">
                     <div class="project-meta">
                         <div class="meta-item">
                             <h3>Client</h3>
-                            <p>Client Name</p>
+                            <p>Red Velvet and Delta Airlines</p>
                         </div>
                         <div class="meta-item">
                             <h3>Year</h3>
-                            <p>2025</p>
+                            <p>2024</p>
                         </div>
                         <div class="meta-item">
                             <h3>Services</h3>
-                            <p>Interactive Installation</p>
+                            <p>Experiential Design, 3D Rendering, Technical Drafting, Fabrication, Event Production</p>
                         </div>
                     </div>
                 </div>
@@ -114,6 +117,9 @@
                 </div>
                 <div class="gallery-item">
                     <img src="../assets/projects/SXSW_Install/selected/giftingSolon.JPG" alt="SXSW_Install - 4">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/SXSW_Install/selected/McLendon-Photography-0581.jpg" alt="SXSW_Install - 5">
                 </div>
 
             </div>
