more project page making and cleaning up copy

--- a/projects/datura.html
+++ b/projects/datura.html
@@ -64,7 +64,7 @@
         </div>
         <div class="project-hero-content">
             <h1>Datura</h1>
-            <p class="project-subtitle">Interactive Experience</p>
+            <p class="project-subtitle">Projection Mapping, Audio Reactive, Content Creation, Event Production</p>
         </div>
     </section>
 
@@ -81,15 +81,15 @@
                     <div class="project-meta">
                         <div class="meta-item">
                             <h3>Client</h3>
-                            <p>Client Name</p>
+                            <p>Detura Events</p>
                         </div>
                         <div class="meta-item">
                             <h3>Year</h3>
-                            <p>2025</p>
+                            <p>2023</p>
                         </div>
                         <div class="meta-item">
                             <h3>Services</h3>
-                            <p>Interactive Installation</p>
+                            <p>Projection Mapping, Audio Reactive, Content Creation, Event Production</p>
                         </div>
                     </div>
                 </div>
