--- a/projects/fusebox.html
+++ b/projects/fusebox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OUOMT | Interactive Nature Studio</title>
+    <title>Fusebox | Interactive Nature Studio</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,14 +57,14 @@
     <section class="project-hero">
         <div class="project-hero-media">
             <!-- Project image -->
-            <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime6.PNG" alt="OUOMT">
+            <img src="../assets/projects/Fusebox/selected/Fusebash2025.jpg" alt="Fusebox">
             
             <!-- Overlay with gradient for better text visibility -->
             <div class="hero-overlay"></div>
         </div>
         <div class="project-hero-content">
-            <h1>Broadway Musical: Once Upon A Time One More Time</h1>
-            <p class="project-subtitle">Immersive Theatre Production</p>
+            <h1>Fusebox</h1>
+            <p class="project-subtitle">Event Production, Content Creation, Projection Mapping</p>
         </div>
     </section>
 
@@ -74,22 +74,23 @@
             <div class="project-info">
                 <div class="project-info-left">
                     <h2>Project Overview</h2>
-                    <p>This is an automatically generated project page for OUOMT. Please update this description with details about the project.</p>
-                    <p>You can add multiple paragraphs to describe the project's concept, goals, and outcomes.</p>
+                    <p>Interactive Nature Studio maintains an ongoing collaborative relationship with Fusebox, contributing to 1-2 large-scale multi-event productions annually. Our comprehensive services include event production, technical drafting, fabrication, projection mapping, and content creation for both their regular Fusebox Festival events and their fundraising gala, FUSEBASH. The technical backbone of these productions leverages our expertise in Vectorworks, Unreal Engine, and TouchDesigner to create cohesive, immersive experiences.</p>
+                    <p>Our primary goals for Fusebox productions are twofold: creating immersive environments that enhance visitor engagement with various performances, and developing compelling fundraising events that help Fusebox meet their financial objectives. The outcomes have consistently met or exceeded expectations, with successful events that not only provide memorable experiences for attendees but also generate the necessary funding to sustain Fusebox's innovative programming.
+                        What makes this partnership particularly valuable is the ongoing nature of our collaboration, allowing us to refine and evolve our approach with each successive event while maintaining a deep understanding of Fusebox's mission and aesthetic preferences.</p>
                 </div>
                 <div class="project-info-right">
                     <div class="project-meta">
                         <div class="meta-item">
                             <h3>Client</h3>
-                            <p>Sven Ortel</p>
+                            <p>Fusebox</p>
                         </div>
                         <div class="meta-item">
                             <h3>Year</h3>
-                            <p>2023</p>
+                            <p>Ongoing Partnership</p>
                         </div>
                         <div class="meta-item">
                             <h3>Services</h3>
-                            <p>Content Creation, Tech Art</p>
+                            <p>Event Production, Content Creation, Projection Mapping</p>
                         </div>
                     </div>
                 </div>
@@ -104,28 +105,40 @@
             <div class="gallery-grid">
                 <!-- Gallery images -->
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/Night_tech.jpg" alt="OUOMT - 1">
+                    <img src="../assets/projects/Fusebox/selected/Fusebash2025.jpg" alt="Fusebox - 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/OMT Screenshot.png" alt="OUOMT - 2">
+                    <img src="../assets/projects/Fusebox/selected/Fusebash2025_SmallRes_IN-11.jpg" alt="Fusebox - 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime.PNG" alt="OUOMT - 3">
+                    <img src="../assets/projects/Fusebox/selected/Fusebash2025_SmallRes_IN-21.jpg" alt="Fusebox - 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime3.PNG" alt="OUOMT - 4">
+                    <img src="../assets/projects/Fusebox/selected/Fusebash2025_SmallRes_IN-22.jpg" alt="Fusebox - 4">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime4.PNG" alt="OUOMT - 5">
+                    <img src="../assets/projects/Fusebox/selected/Fusebash2025_SmallRes_IN-27.jpg" alt="Fusebox - 5">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime5.PNG" alt="OUOMT - 6">
+                    <img src="../assets/projects/Fusebox/selected/Fusebash2025_SmallRes_IN-32.jpg" alt="Fusebox - 6">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime6.PNG" alt="OUOMT - 7">
+                    <img src="../assets/projects/Fusebox/selected/Fusebash2025_SmallRes_IN-47.jpg" alt="Fusebox - 7">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/OUAOMT1.jpg" alt="OUOMT - 8">
+                    <img src="../assets/projects/Fusebox/selected/FUSEBOX_HUB_GROUNDPLAN_3.28.22.png" alt="Fusebox - 8">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/Fusebox/selected/fusebox_HUB_STAGE_1.13.21_V1.png" alt="Fusebox - 9">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/Fusebox/selected/Princess Goes To Butterfly Museum at Fusebox Hub (4-16-22) by Ismael Quintanilla III 11.jpg" alt="Fusebox - 10">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/Fusebox/selected/PXL_20220224_173805137.jpg" alt="Fusebox - 11">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/Fusebox/selected/The Illustrious Blacks at Fusebox Hub (4-15-22) by Ismael Quintanilla III 2.jpg" alt="Fusebox - 12">
                 </div>
 
             </div>
