--- a/projects/interactiveart_ba.html
+++ b/projects/interactiveart_ba.html
@@ -63,8 +63,8 @@
             <div class="hero-overlay"></div>
         </div>
         <div class="project-hero-content">
-            <h1>InteractiveArt_BA</h1>
-            <p class="project-subtitle">Interactive Experience</p>
+            <h1>Bored Apes: Interactive Digital Art</h1>
+            <p class="project-subtitle">Digital Interactive Experience</p>
         </div>
     </section>
 
