--- a/projects/interactiveart_cp.html
+++ b/projects/interactiveart_cp.html
@@ -63,8 +63,8 @@
             <div class="hero-overlay"></div>
         </div>
         <div class="project-hero-content">
-            <h1>InteractiveArt_CP</h1>
-            <p class="project-subtitle">Interactive Experience</p>
+            <h1>Cryptopunks: Interactive Digital Art</h1>
+            <p class="project-subtitle">Digital Interactive Experience</p>
         </div>
     </section>
 
@@ -81,15 +81,15 @@
                     <div class="project-meta">
                         <div class="meta-item">
                             <h3>Client</h3>
-                            <p>Client Name</p>
+                            <p>The Forever</p>
                         </div>
                         <div class="meta-item">
                             <h3>Year</h3>
-                            <p>2025</p>
+                            <p>2023</p>
                         </div>
                         <div class="meta-item">
                             <h3>Services</h3>
-                            <p>Interactive Installation</p>
+                            <p>Concept Art, Environment Art, Unreal Engine Development, Sound Design, Backend Server Integration</p>
                         </div>
                     </div>
                 </div>
@@ -110,16 +110,13 @@
                     <img src="../assets/projects/InteractiveArt_CP/selected/disco.png" alt="InteractiveArt_CP - 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/InteractiveArt_CP/selected/HighresScreenshot00001.png" alt="InteractiveArt_CP - 3">
+                    <img src="../assets/projects/InteractiveArt_CP/selected/HighresScreenshot00005.png" alt="InteractiveArt_CP - 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/InteractiveArt_CP/selected/HighresScreenshot00005.png" alt="InteractiveArt_CP - 4">
+                    <img src="../assets/projects/InteractiveArt_CP/selected/lockers.png" alt="InteractiveArt_CP - 4">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/InteractiveArt_CP/selected/lockers.png" alt="InteractiveArt_CP - 5">
-                </div>
-                <div class="gallery-item">
-                    <img src="../assets/projects/InteractiveArt_CP/selected/waitingRoom.png" alt="InteractiveArt_CP - 6">
+                    <img src="../assets/projects/InteractiveArt_CP/selected/waitingRoom.png" alt="InteractiveArt_CP - 5">
                 </div>
 
             </div>
