--- a/projects/thelittlemermaid.html
+++ b/projects/thelittlemermaid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OUOMT | Interactive Nature Studio</title>
+    <title>TheLittleMermaid | Interactive Nature Studio</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,14 +57,14 @@
     <section class="project-hero">
         <div class="project-hero-media">
             <!-- Project image -->
-            <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime6.PNG" alt="OUOMT">
+            <img src="../assets/projects/TheLittleMermaid/selected/oceanView.jpg" alt="TheLittleMermaid">
             
             <!-- Overlay with gradient for better text visibility -->
             <div class="hero-overlay"></div>
         </div>
         <div class="project-hero-content">
-            <h1>Broadway Musical: Once Upon A Time One More Time</h1>
-            <p class="project-subtitle">Immersive Theatre Production</p>
+            <h1>TheLittleMermaid</h1>
+            <p class="project-subtitle">Immersive Theatre Performance</p>
         </div>
     </section>
 
@@ -74,22 +74,22 @@
             <div class="project-info">
                 <div class="project-info-left">
                     <h2>Project Overview</h2>
-                    <p>This is an automatically generated project page for OUOMT. Please update this description with details about the project.</p>
+                    <p>This is an automatically generated project page for TheLittleMermaid. Please update this description with details about the project.</p>
                     <p>You can add multiple paragraphs to describe the project's concept, goals, and outcomes.</p>
                 </div>
                 <div class="project-info-right">
                     <div class="project-meta">
                         <div class="meta-item">
                             <h3>Client</h3>
-                            <p>Sven Ortel</p>
+                            <p>St.Andrews</p>
                         </div>
                         <div class="meta-item">
                             <h3>Year</h3>
-                            <p>2023</p>
+                            <p>2022</p>
                         </div>
                         <div class="meta-item">
                             <h3>Services</h3>
-                            <p>Content Creation, Tech Art</p>
+                            <p>Immersive Theatre Performance, Techincal Drafting, Projection Mapping, Content Creation</p>
                         </div>
                     </div>
                 </div>
@@ -104,28 +104,34 @@
             <div class="gallery-grid">
                 <!-- Gallery images -->
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/Night_tech.jpg" alt="OUOMT - 1">
+                    <img src="../assets/projects/TheLittleMermaid/selected/HighresScreenshot00028.png" alt="TheLittleMermaid - 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/OMT Screenshot.png" alt="OUOMT - 2">
+                    <img src="../assets/projects/TheLittleMermaid/selected/oceanView.jpg" alt="TheLittleMermaid - 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime.PNG" alt="OUOMT - 3">
+                    <img src="../assets/projects/TheLittleMermaid/selected/PXL_20211026_015235540.jpg" alt="TheLittleMermaid - 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime3.PNG" alt="OUOMT - 4">
+                    <img src="../assets/projects/TheLittleMermaid/selected/PXL_20211026_022200478.jpg" alt="TheLittleMermaid - 4">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime4.PNG" alt="OUOMT - 5">
+                    <img src="../assets/projects/TheLittleMermaid/selected/PXL_20211026_032341874.jpg" alt="TheLittleMermaid - 5">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime5.PNG" alt="OUOMT - 6">
+                    <img src="../assets/projects/TheLittleMermaid/selected/PXL_20211026_033952072.jpg" alt="TheLittleMermaid - 6">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/onceUponAOneMoreTime6.PNG" alt="OUOMT - 7">
+                    <img src="../assets/projects/TheLittleMermaid/selected/PXL_20211110_011229483.jpg" alt="TheLittleMermaid - 7">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/OUOMT/selected/OUAOMT1.jpg" alt="OUOMT - 8">
+                    <img src="../assets/projects/TheLittleMermaid/selected/PXL_20211110_013212944.jpg" alt="TheLittleMermaid - 8">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/TheLittleMermaid/selected/standrews_PROJECTION_DIAGRAM.jpg" alt="TheLittleMermaid - 9">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/TheLittleMermaid/selected/TritonsCourt.png" alt="TheLittleMermaid - 10">
                 </div>
 
             </div>
