--- a/services/digital-environment-design.html
+++ b/services/digital-environment-design.html
@@ -87,7 +87,7 @@
                     <p>Using advanced 3D modeling, rendering, and real-time visualization tools, we craft detailed digital environments that can be used for film and video production, marketing presentations, spatial planning, or as fully interactive virtual experiences. Our designs combine aesthetic vision with practical considerations to create compelling digital spaces that serve both creative and functional purposes.</p>
                 </div>
                 <div class="overview-image">
-                    <img src="../assets/images/portfolio/zoltar.jpg" alt="Digital Environment Design Overview">
+                    <img src="../assets/images/portfolio/MineVr.png" alt="Digital Environment Design Overview">
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
                             <path d="M8 38H56" stroke="url(#iridescent-gradient)" stroke-width="2"/>
                         </svg>
                     </div>
-                    <h3>Cinema 4D</h3>
+                    <h3>Maya</h3>
                 </div>
                 <div class="tool-item">
                     <div class="tool-icon">
