--- a/services/technical-event-production.html
+++ b/services/technical-event-production.html
@@ -88,7 +88,7 @@
                     <p>With our meticulous approach to technical design and execution, we ensure that every element of your event—lighting, sound, staging, video, and more—works together seamlessly to create a cohesive and impactful experience for your audience, regardless of event size or complexity.</p>
                 </div>
                 <div class="overview-image">
-                    <img src="../assets/images/portfolio/lightForest.jpg" alt="Technical Event Production Overview">
+                    <img src="../assets/images/portfolio/Fusebash2025.jpg" alt="Technical Event Production Overview">
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
                             <path d="M16 24L16 40" stroke="url(#iridescent-gradient)" stroke-width="2"/>
                         </svg>
                     </div>
-                    <h3>Cinema 4D</h3>
+                    <h3>Touch Desigher</h3>
                 </div>
                 <div class="tool-item">
                     <div class="tool-icon">
