--- a/projects/interactiveart_cp.html
+++ b/projects/interactiveart_cp.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="../css/project.css">
 </head>
-<body>
+<body data-nda="true">
     <div class="cursor"></div>
     
     <svg class="bg-lines" width="100%" height="100%" preserveAspectRatio="none">
