test to see if Rupaul clientLogo is fixed

--- a/projects/sxsw_install.html
+++ b/projects/sxsw_install.html
@@ -116,7 +116,7 @@
                     <img src="../assets/projects/SXSW_Install/selected/giftingSalon2.JPG" alt="SXSW_Install - 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/SXSW_Install/selected/giftingSolon.JPG" alt="SXSW_Install - 4">
+                    <img src="../assets/projects/SXSW_Install/selected/giftingSolon.png" alt="SXSW_Install - 4">
                 </div>
                 <div class="gallery-item">
                     <img src="../assets/projects/SXSW_Install/selected/McLendon-Photography-0581.jpg" alt="SXSW_Install - 5">
