--- a/services/interactive-installations.html
+++ b/services/interactive-installations.html
@@ -86,7 +86,7 @@
                     <p>Whether for brand activations, museum exhibitions, public art installations, or private events, our team designs and builds custom interactive systems that invite exploration and create opportunities for meaningful engagement. Each installation is uniquely crafted to fit your space, objectives, and target audience.</p>
                 </div>
                 <div class="overview-image">
-                    <img src="../assets/images/portfolio/giftingSolon.jpg" alt="Interactive Installation Overview">
+                    <img src="../assets/images/portfolio/giftingSolon.png" alt="Interactive Installation Overview">
                 </div>
             </div>
         </div>
