fixed password protected feature - all working now

--- a/projects/sxsw_install.html
+++ b/projects/sxsw_install.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="../css/project.css">
 </head>
-<body>
+<body data-nda="true">
     <div class="cursor"></div>
     
     <svg class="bg-lines" width="100%" height="100%" preserveAspectRatio="none">
@@ -116,7 +116,7 @@
                     <img src="../assets/projects/SXSW_Install/selected/giftingSalon2.JPG" alt="SXSW_Install - 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="../assets/projects/SXSW_Install/selected/giftingSolon.png" alt="SXSW_Install - 4">
+                    <img src="../assets/images/portfolio/giftingSolon.png" alt="SXSW_Install - 4">
                 </div>
                 <div class="gallery-item">
                     <img src="../assets/projects/SXSW_Install/selected/McLendon-Photography-0581.jpg" alt="SXSW_Install - 5">
