--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
 <section class="hero">
     <div class="video-background">
-        <video autoplay loop muted playsinline>
+        <video autoplay loop muted playsinline webkit-playsinline preload="auto" crossorigin="anonymous">
+            <source src="assets/videos/groundStarsTracking.webm" type="video/webm">
             <source src="assets/videos/groundStarsTracking.mp4" type="video/mp4">
         </video>
     </div>
