--- a/projects/project-template.html
+++ b/projects/project-template.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="../css/project.css">
 </head>
-<body data-nda="true">
+<body>
     <div class="cursor"></div>
     
     <svg class="bg-lines" width="100%" height="100%" preserveAspectRatio="none">
