--- a/projects/sxsw_install.html
+++ b/projects/sxsw_install.html
@@ -57,7 +57,7 @@
     <section class="project-hero">
         <div class="project-hero-media">
             <!-- Project image -->
-            <img src="../assets/projects/SXSW_Install/selected/apothacary.JPG" alt="SXSW Experiencial Design">
+            <img src="../assets/projects/SXSW_Install/selected/McLendon-Photography-0510.jpg" alt="SXSW Experiencial Design">
             
             <!-- Overlay with gradient for better text visibility -->
             <div class="hero-overlay"></div>
@@ -107,6 +107,12 @@
             <div class="gallery-grid">
                 <!-- Gallery images -->
                 <div class="gallery-item">
+                    <img src="../assets/projects/SXSW_Install//selected/McLendon-Photography-0585.jpg" alt="SXSW_Install - 9">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/SXSW_Install/selected/McLendon-Photography-0609.jpg" alt="SXSW_Install - 10">
+                </div>
+                <div class="gallery-item">
                     <img src="../assets/projects/SXSW_Install/selected/apothacary.JPG" alt="SXSW_Install - 1">
                 </div>
                 <div class="gallery-item">
@@ -120,6 +126,21 @@
                 </div>
                 <div class="gallery-item">
                     <img src="../assets/projects/SXSW_Install/selected/McLendon-Photography-0581.jpg" alt="SXSW_Install - 5">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/SXSW_Install/selected/IMG_6129.jpg" alt="SXSW_Install - 6">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/SXSW_Install/selected/lounge2.jpg" alt="SXSW_Install - 7">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/SXSW_Install/selected/hestia.jpg" alt="SXSW_Install - 8">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/SXSW_Install//selected/checkIn.jpg" alt="SXSW_Install - 9">
+                </div>
+                <div class="gallery-item">
+                    <img src="../assets/projects/SXSW_Install/selected/shelf.jpg" alt="SXSW_Install - 10">
                 </div>
 
             </div>
