--- a/projects/aimi.html
+++ b/projects/aimi.html
@@ -64,7 +64,7 @@
         </div>
         <div class="project-hero-content">
             <h1>AIMI</h1>
-            <p class="project-subtitle">Interactive Experience</p>
+            <p class="project-subtitle">Technical Drafting, 3D Visualization</p>
         </div>
     </section>
 
@@ -81,15 +81,15 @@
                     <div class="project-meta">
                         <div class="meta-item">
                             <h3>Client</h3>
-                            <p>Client Name</p>
+                            <p>AIMI</p>
                         </div>
                         <div class="meta-item">
                             <h3>Year</h3>
-                            <p>2025</p>
+                            <p>2022</p>
                         </div>
                         <div class="meta-item">
                             <h3>Services</h3>
-                            <p>Interactive Installation</p>
+                            <p>Techincal Drafting, 3D Visualization, Unreal Engine Environment Art</p>
                         </div>
                     </div>
                 </div>
