added new pages and cleaned up old pages + added northgate resort logo to client logos

--- a/projects/cisco_virtualproduction.html
+++ b/projects/cisco_virtualproduction.html
@@ -81,7 +81,7 @@
                     <div class="project-meta">
                         <div class="meta-item">
                             <h3>Client</h3>
-                            <p>JP Connaly and Cisco</p>
+                            <p>JP Connelly and Cisco</p>
                         </div>
                         <div class="meta-item">
                             <h3>Year</h3>
