--- a/projects/virtualproducion_vr_cave.html
+++ b/projects/virtualproducion_vr_cave.html
@@ -81,7 +81,7 @@
                     <div class="project-meta">
                         <div class="meta-item">
                             <h3>Client</h3>
-                            <p>JP Connaly and Meta</p>
+                            <p>JP Connelly and Meta</p>
                         </div>
                         <div class="meta-item">
                             <h3>Year</h3>
