potentially fixed background on mobile

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     </header>
 
 <section class="hero">
-    <div class="video-background">
+<div class="video-background">
         <video autoplay loop muted playsinline webkit-playsinline preload="auto" crossorigin="anonymous">
-            <source src="assets/videos/groundStarsTracking.webm" type="video/webm">
+            <!-- WebM source removed since file doesn't exist -->
             <source src="assets/videos/groundStarsTracking.mp4" type="video/mp4">
         </video>
     </div>
