added favicon to all webpages on website

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="css/nda-protection.css">
     <link rel="stylesheet" href="css/project-gallery.css">
     
+     <!-- Favicon Files -->
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/IN_favicon.ico">
+
     <style>
         /* Inline logo animation to ensure it's defined */
         @keyframes logoWarp {
