--- a/projects/interactiveart_wb.html
+++ b/projects/interactiveart_wb.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="../css/animations.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="../css/project.css">
+
+     <!-- Favicon Files -->
+    <link rel="icon" type="image/x-icon" href="../assets/favicon/IN_favicon.ico">
 </head>
 <body data-nda="true">
     <div class="cursor"></div>
